# rfc-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  publish.yml
completions/: README.md  rfcman.bash
src/rfcman/: __init__.py  __main__.py  check.py  cli.py  completion.py  constants.py  display.py  document.py  lifecycle.py  store.py  workspace.py
src/rfcman/templates/: accepted.md.j2  idea.md.j2  proposed.md.j2  rejected.md.j2  research.md.j2  superseded.md.j2
tests/: test_cli.py  test_completion.py  test_document.py  test_help.py  test_project.py  test_upgrade.py
