[project]
name = "rfcman"
version = "0.1.5"
description = "rfcman — a BigTalk utility: fast CLI for managing RFC lifecycles"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Chris Roy", email = "iam@thechris.in" },
]
requires-python = ">=3.12"
keywords = ["rfc", "cli", "documentation", "proposals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "questionary>=2.0.1",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/bigtalk-org/rfc-manager"
Repository = "https://github.com/bigtalk-org/rfc-manager"
Documentation = "https://github.com/bigtalk-org/rfc-manager#readme"
Changelog = "https://github.com/bigtalk-org/rfc-manager/blob/main/CHANGELOG.md"

[project.scripts]
rfcman = "rfcman.cli:app"

[project.optional-dependencies]
dev = [
    "commitizen>=4.1.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rfcman"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/docs",
    "/completions",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
mypy_path = "src"
packages = ["rfcman"]

[[tool.mypy.overrides]]
module = ["questionary.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--strict-markers"]
filterwarnings = []

[tool.coverage.run]
source = ["rfcman"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.5"
version_files = [
    "pyproject.toml:^version",
    "src/rfcman/__init__.py:^__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
